<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.example.profile.Q4Fragment">

    <TextView
        android:id="@+id/preference_q4_text_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/preference_q4_question_text"
        android:textSize="24sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/preference_q4_clarification_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/preference_q4_clarification_text"
        android:textSize="12sp"
        app:layout_constraintTop_toBottomOf="@id/preference_q4_text_textview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <CheckBox
        android:id="@+id/preference_q4_cb0_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:text="@string/preference_q4_cb0_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/preference_q4_clarification_textview" />

    <CheckBox
        android:id="@+id/preference_q4_cb1_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="0dp"
        android:text="@string/preference_q4_cb1_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/preference_q4_cb0_checkbox" />

    <CheckBox
        android:id="@+id/preference_q4_cb2_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="0dp"
        android:text="@string/preference_q4_cb2_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/preference_q4_cb1_checkbox" />

    <CheckBox
        android:id="@+id/preference_q4_cb3_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="0dp"
        android:text="@string/preference_q4_cb3_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/preference_q4_cb2_checkbox" />

    <CheckBox
        android:id="@+id/preference_q4_cb4_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="0dp"
        android:text="@string/preference_q4_cb4_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/preference_q4_cb3_checkbox" />

    <CheckBox
        android:id="@+id/preference_q4_cb5_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="0dp"
        android:text="@string/preference_q4_cb5_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/preference_q4_cb4_checkbox" />

    <CheckBox
        android:id="@+id/preference_q4_cb6_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="0dp"
        android:text="@string/preference_q4_cb6_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/preference_q4_cb5_checkbox" />

    <CheckBox
        android:id="@+id/preference_q4_cb7_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="0dp"
        android:text="@string/preference_q4_cb7_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/preference_q4_cb6_checkbox" />

    <CheckBox
        android:id="@+id/preference_q4_cb8_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="0dp"
        android:text="@string/preference_q4_cb8_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/preference_q4_cb7_checkbox" />

</androidx.constraintlayout.widget.ConstraintLayout>