<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.example.profile.Q3Fragment">

    <RadioGroup
        android:id="@+id/preference_q3_responses_radiogroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="110dp"
        android:layout_marginLeft="110dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="110dp"
        android:layout_marginRight="110dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/preference_q3_text_textview">

        <RadioButton
            android:id="@+id/preference_q3_rb0_radiobutton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:button="@android:color/transparent"
            android:checked="true"
            android:drawableTop="@android:drawable/btn_radio"
            android:gravity="center"
            android:text="@string/preference_q3_rb0_text" />

        <RadioButton
            android:id="@+id/preference_q3_rb1_radiobutton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:button="@android:color/transparent"
            android:drawableTop="@android:drawable/btn_radio"
            android:gravity="center"
            android:text="@string/preference_q3_rb1_text" />

        <RadioButton
            android:id="@+id/preference_q3_rb2_radiobutton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:button="@android:color/transparent"
            android:drawableTop="@android:drawable/btn_radio"
            android:gravity="center"
            android:text="@string/preference_q3_rb2_text" />

        <RadioButton
            android:id="@+id/preference_q3_rb3_radiobutton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:button="@android:color/transparent"
            android:drawableTop="@android:drawable/btn_radio"
            android:gravity="center"
            android:text="@string/preference_q3_rb3_text" />

        <RadioButton
            android:id="@+id/preference_q3_rb4_radiobutton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:button="@android:color/transparent"
            android:drawableTop="@android:drawable/btn_radio"
            android:gravity="center"
            android:text="@string/preference_q3_rb4_text" />
    </RadioGroup>

    <TextView
        android:id="@+id/preference_q3_text_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/preference_q3_question_text"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>