<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.intakesurvey.IntakeQ2Fragment">

    <TextView
        android:id="@+id/intake_q2_text_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/intake_q2_text_textview_text"
        android:textSize="24sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <RadioGroup
        android:id="@+id/intake_q2_responses_radiogroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        app:layout_constraintTop_toBottomOf="@+id/intake_q2_text_textview"
        app:layout_constraintStart_toStartOf="parent"
        >

        <RadioButton
            android:id="@+id/intake_q2_rb0_radiobutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/intake_q2_rb0_radiobutton_text"
            android:textSize="18sp"
            />
        <RadioButton
            android:id="@+id/intake_q2_rb1_radiobutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/intake_q2_rb1_radiobutton_text"
            android:textSize="18sp"
            />
    </RadioGroup>

    <EditText
        android:id="@+id/intake_q2_where_edittext"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:background="@drawable/edit_text_background"
        android:singleLine="true"
        android:visibility="invisible"
        app:layout_constraintStart_toEndOf="@id/intake_q2_responses_radiogroup"
        app:layout_constraintTop_toTopOf="@id/intake_q2_responses_radiogroup" />

    <TextView
        android:id="@+id/intake_q2_whereinstructions_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/intake_q2_whereinstructions_textview_text"
        android:textSize="10sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/intake_q2_where_edittext"
        app:layout_constraintStart_toStartOf="@+id/intake_q2_where_edittext"
        />

    <TextView
        android:id="@+id/intake_q2a_text_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="30dp"
        android:gravity="center"
        android:text="@string/intake_q2a_text_textview_text"
        android:textSize="24sp"
        android:visibility="invisible"
        app:layout_constraintTop_toBottomOf="@+id/intake_q2_responses_radiogroup"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <RadioGroup
        android:id="@+id/intake_q2a_responses_radiogroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:visibility="invisible"
        app:layout_constraintTop_toBottomOf="@+id/intake_q2a_text_textview"
        app:layout_constraintStart_toStartOf="parent" >

        <RadioButton
            android:id="@+id/intake_q2a_rb0_radiobutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/intake_q2a_rb0_radiobutton_text"
            android:textSize="18sp"
            />
        <RadioButton
            android:id="@+id/intake_q2a_rb1_radiobutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/intake_q2a_rb1_radiobutton_text"
            android:textSize="18sp"
            />
    </RadioGroup>

    <EditText
        android:id="@+id/intake_q2a_who_edittext"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:background="@drawable/edit_text_background"
        android:singleLine="true"
        android:visibility="invisible"
        app:layout_constraintTop_toTopOf="@+id/intake_q2a_responses_radiogroup"
        app:layout_constraintStart_toEndOf="@+id/intake_q2a_responses_radiogroup"
        />

    <TextView
        android:id="@+id/intake_q2a_whoinstructions_textview"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/intake_q2a_whoinstructions_textview_text"
        android:textSize="10sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/intake_q2a_who_edittext"
        app:layout_constraintStart_toStartOf="@+id/intake_q2a_who_edittext"
        />

</androidx.constraintlayout.widget.ConstraintLayout>