<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.example.profileresources.Q2Fragment">

    <TextView
        android:id="@+id/preference_q2_optionalresponsetext_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/preference_q2_optionalresponse_text"
        app:layout_constraintBottom_toTopOf="@+id/preference_q2_optionalresponse_edittext"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/preference_q2_optionalresponse_edittext"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <RadioGroup
        android:id="@+id/preference_q2_responses_radiogroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/preference_q2_clarification_textview">

        <RadioButton
            android:id="@+id/preference_q2_rb0_radiobutton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:button="@android:color/transparent"
            android:checked="true"
            android:drawableTop="@android:drawable/btn_radio"
            android:gravity="center"
            android:text="@string/preference_q2_rb0_text" />

        <RadioButton
            android:id="@+id/preference_q2_rb1_radiobutton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:button="@android:color/transparent"
            android:drawableTop="@android:drawable/btn_radio"
            android:gravity="center"
            android:text="" />

        <RadioButton
            android:id="@+id/preference_q2_rb2_radiobutton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:button="@android:color/transparent"
            android:drawableTop="@android:drawable/btn_radio"
            android:gravity="center"
            android:text="@string/preference_q2_rb2_text" />

        <RadioButton
            android:id="@+id/preference_q2_rb3_radiobutton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:button="@android:color/transparent"
            android:drawableTop="@android:drawable/btn_radio"
            android:gravity="center"
            android:text="" />

        <RadioButton
            android:id="@+id/preference_q2_rb4_radiobutton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:button="@android:color/transparent"
            android:drawableTop="@android:drawable/btn_radio"
            android:gravity="center"
            android:text="@string/preference_q2_rb4_text" />
    </RadioGroup>

    <TextView
        android:id="@+id/preference_q2_text_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/preference_q2_question_text"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/preference_q2_clarification_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/preference_q2_clarification_text"
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/preference_q2_text_textview" />

</androidx.constraintlayout.widget.ConstraintLayout>