<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.intakesurvey.IntakeQ1Fragment">

    <TextView
        android:id="@+id/intake_q1_text_textview"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/intake_q1_text_textview_text"
        android:textSize="24sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/intake_q1_clarification_textview"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/intake_q1_clarification_textview_text"
        android:textSize="10sp"
        app:layout_constraintTop_toBottomOf="@+id/intake_q1_text_textview"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <RadioGroup
        android:id="@+id/intake_q1_responses_radiogroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/intake_q1_clarification_textview"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >

        <RadioButton
            android:id="@+id/intake_q1_rb0_radiobutton"
            android:layout_width="70dp"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:button="@android:color/transparent"
            android:checked="true"
            android:drawableTop="@android:drawable/btn_radio"
            android:gravity="center"
            android:text="@string/intake_q1_rb0_radiobutton_text"
            />

        <RadioButton
            android:id="@+id/intake_q1_rb1_radiobutton"
            android:layout_width="70dp"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:button="@android:color/transparent"
            android:drawableTop="@android:drawable/btn_radio"
            android:gravity="center"
            android:text=""
            />

        <RadioButton
            android:id="@+id/intake_q1_rb2_radiobutton"
            android:layout_width="70dp"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:button="@android:color/transparent"
            android:drawableTop="@android:drawable/btn_radio"
            android:gravity="center"
            android:text="@string/intake_q1_rb2_radiobutton_text"
            />

        <RadioButton
            android:id="@+id/intake_q1_rb3_radiobutton"
            android:layout_width="70dp"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:button="@android:color/transparent"
            android:drawableTop="@android:drawable/btn_radio"
            android:gravity="center"
            android:text=""
            />

        <RadioButton
            android:id="@+id/intake_q1_rb4_radiobutton"
            android:layout_width="70dp"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:button="@android:color/transparent"
            android:drawableTop="@android:drawable/btn_radio"
            android:gravity="center"
            android:text="@string/intake_q1_rb4_radiobutton_text"
            />
    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>